Fixed spacing and padding on paragraphs

--- a/css/main.scss
+++ b/css/main.scss
@@ -103,6 +103,7 @@ p#programDescription {
     float: left;
     line-height: 1.2rem;
     background-color: black;
+    padding: 0.3rem;
 }
 
 p#careerPathways {
@@ -111,6 +112,7 @@ p#careerPathways {
     float: right;
     background-color: black;
     line-height: 1.2rem;
+    padding: 0.3rem;
 }
 
 img#programDescriptionImage {
@@ -119,7 +121,7 @@ img#programDescriptionImage {
 }
 
 img#careerPathwaysImage {
-    max-width: 40%;
+    max-width: 39%;
     margin-right: 6rem;
 }
 
